# QR

./: .gitignore  README.md  example.ipynb  pyproject.toml
data/QR/v1/estimations/AAL/xnas-itch/: 2023-07-17.csv  2023-07-18.csv  2023-07-19.csv  2023-07-20.csv  2023-07-21.csv  2023-07-24.csv  2023-07-25.csv  2023-07-26.csv  2023-07-27.csv  2023-07-28.csv  2023-07-31.csv  2023-08-01.csv  2023-08-02.csv  2023-08-03.csv  2023-08-04.csv  2023-08-07.csv  2023-08-08.csv  2023-08-09.csv  2023-08-10.csv  2023-08-11.csv  2023-08-14.csv  2023-08-15.csv  2023-08-16.csv  2023-08-17.csv  2023-08-18.csv  2023-08-21.csv  2023-08-22.csv  2023-08-23.csv  2023-08-24.csv  2023-08-25.csv  2023-08-28.csv  2023-08-29.csv  2023-08-30.csv  2023-08-31.csv  2023-09-01.csv  2023-09-05.csv  2023-09-06.csv  2023-09-07.csv  2023-09-08.csv  2023-09-11.csv  (+319 more)
data/QR/v1/queue_sizes/AAL/xnas-itch/: 2023-07-17.csv  2023-07-18.csv  2023-07-19.csv  2023-07-20.csv  2023-07-21.csv  2023-07-24.csv  2023-07-25.csv  2023-07-26.csv  2023-07-27.csv  (+287 more)
notebooks/: example.ipynb
src/: README.md  __init__.py  alpha_qr.py  buffer.py  config.py  distributions.py  matching_engine.py  orderbook.py  preprocessing.py  qr_params.py  queue_reactive.py  race.py  rare_events.py  utils.py
src/alpha_queue_reactive/: alpha.py  alpha_qr.py  buffer.py  config.py  distributions.py  matching_engine.py  orderbook.py  queue_reactive.py  race.py  trader.py
src/aqr/: __init__.py  alpha.py  alpha_qr.py  buffer.py  config.py  impact.py  matching_engine.py  orderbook.py  qr_params.py  queue_reactive.py  race.py  trader.py  utils.py
(+354 files in other folders)
